# haskell-vacuum-agent

./: .gitignore  LICENSE.md  README.md  haskell-vacuum - Shortcut.lnk  vacuum.cabal
app/: Main.hs
src/: Main.hs  vacuum.hs
