cabal-version: 2.4

name: vacuum
version: 0.0.0.1



executable vacuum
    main-is: Main.hs
    other-modules: Vacuum
    hs-source-dirs: src
    default-language: Haskell2010

    default-extensions: GADTSyntax

    build-depends: 
      base >= 4.11 && <5,
      filepath >=1.4.2.1 && <1.5,
      random >=1.2.0 && <1.3
      

    ghc-options:
      -fwarn-incomplete-patterns
      -fwarn-incomplete-uni-patterns
      -Werror
      -O2
